<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Ofek Pintok on 12/4/18 3:45 PM
  ~ Copyright (c) 2018 . All rights reserved
  ~ Last modified 12/4/18 3:45 PM
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/thread_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/thread_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_start"
        app:layout_constraintEnd_toStartOf="@+id/thread_cancel"
        app:layout_constraintStart_toEndOf="@+id/thread_create"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/thread_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thread_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/thread_request_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/thread_start_msg"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/credits"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>